--- a/public/slunch-web/src/app/vote-page/vote-page.component.css
+++ b/public/slunch-web/src/app/vote-page/vote-page.component.css
@@ -1,9 +1,6 @@
 
 .admin-control{
-  padding-top:1em;
-  padding-bottom:1em;
-  padding-right:3em;
-  padding-left:3em;
+  padding: 1em 3em;
   border: 1px lightgray solid;
 }
 
