Changed widths to upper bounds, not fixed

--- a/public/slunch-web/src/app/gridElements/grid-poll-option-control/grid-poll-option-control.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-poll-option-control/grid-poll-option-control.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px" style="width:100%; height: 100%;">
-  <button color="primary" mat-raised-button (click)="editPollOption(po)">
+  <button color="primary" mat-raised-button (click)="editPollOption()">
     Edit
   </button>
 </div>
