Date control to limit number of read transactions from firebase

--- a/public/slunch-web/src/app/account/account.component.html
+++ b/public/slunch-web/src/app/account/account.component.html
@@ -39,11 +39,12 @@
   </mat-card-title>
   <mat-card-content>
 
-    <ag-grid-angular
-    style="height: 500px"
-    class="ag-theme-material"
-    [gridOptions]="transactionService.myGO">
+    <ag-grid-angular style="height: 500px" class="ag-theme-material" [gridOptions]="transactionService.myGO">
     </ag-grid-angular>
+
+    <div style="margin-top: 20px">
+      *Showing transactions for <strong>{{transactionService.dateLBToDate()}}</strong> onwards
+    </div>
 
   </mat-card-content>
 
