Differentiate done transactions from all transactions

--- a/public/slunch-web/src/app/admin/admin.component.html
+++ b/public/slunch-web/src/app/admin/admin.component.html
@@ -31,7 +31,7 @@
             </div>
         </mat-expansion-panel-header>
 
-        <ag-grid-angular style="height: 500px" class="ag-theme-material" [gridOptions]="transactionService.allGO">
+        <ag-grid-angular style="height: 500px" class="ag-theme-material" [gridOptions]="transactionService.doneGO">
         </ag-grid-angular>
 
         <mat-form-field style="margin-top: 20px">
