Added a close button for the MatBottomSheet

--- a/public/slunch-web/src/app/calculate-price/calculate-price.component.html
+++ b/public/slunch-web/src/app/calculate-price/calculate-price.component.html
@@ -1,5 +1,10 @@
 <div class="receipt-aside">
   <div class="receipt-details">
+    
+    <div style="position:absolute; top:5px; right: 5px;">
+      <mat-icon class="close clickable" (click)="close()">close</mat-icon>
+    </div>
+    
     <div class="receipt-item bottom-divider">
       <p class="receipt-info">
         <strong class="" style="color: rgba(38,45,59,1);font-size: 15px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;display:block;">
