--- a/public/slunch-web/src/app/vote-page/vote-page.component.html
+++ b/public/slunch-web/src/app/vote-page/vote-page.component.html
@@ -1,14 +1,14 @@
 <app-header></app-header>
 
 <div *ngIf="authService.isAdmin" class="admin-control">
-  <div class="control">
-    <mat-slide-toggle style="width: 100%; height:100%" [disabled]="stateService.isOrdering" [(ngModel)]="pollService.allowPoll"
+  <div class="control" style="float: left">
+    <mat-slide-toggle style="height:100%" [disabled]="stateService.isOrdering" [(ngModel)]="pollService.allowPoll"
       (click)="togglePoll()">
       Show Poll
     </mat-slide-toggle>
   </div>
   <div class="control">
-    <mat-slide-toggle style="width: 100%; height:100%" [disabled]="!(pollService.getAdminSelectedOptions().length > 0 && pollService.allowPoll)"
+    <mat-slide-toggle style="height:100%; margin-left: 2em;" [disabled]="!(pollService.getAdminSelectedOptions().length > 0 && pollService.allowPoll)"
       [(ngModel)]="stateService.isOrdering" (click)="toggleOrders()">
       Allow Orders
     </mat-slide-toggle>
@@ -37,6 +37,19 @@
 </div>
 <div *ngIf="stateService.isOrdering">
   <app-order></app-order>
+</div>
+<div *ngIf="authService.isAdmin">
+  <mat-expansion-panel style="margin:3em">
+    <mat-expansion-panel-header style="height: 300px">
+      <mat-panel-title>Voters</mat-panel-title>
+      <mat-panel-description *ngIf="pollService.newOptions > 0" class="flex-grow-zero">
+        <strong>New:</strong> &nbsp; <strong class="red">{{pollService.newOptions}}</strong>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <ag-grid-angular [gridOptions]="pollService.votersGO" class="ag-theme-material" style="height: 500px">
+    </ag-grid-angular>
+  </mat-expansion-panel>
 </div>
 
 <div *ngIf="sentSuggestions < 1" style="margin:3em">
