--- a/public/slunch-web/src/app/gridElements/grid-cancel-transaction-admin/grid-cancel-transaction-admin.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-cancel-transaction-admin/grid-cancel-transaction-admin.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button color="warn" (click)="cancelTransaction(t)">
-  {{caption}}
-</button>
+<mat-icon class="clickable" (click)="cancelTransaction(t)" [matTooltip]="caption" style="color: grey">
+  delete
+</mat-icon>
