--- a/public/slunch-web/src/app/gridElements/grid-cancel-transaction/grid-cancel-transaction.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-cancel-transaction/grid-cancel-transaction.component.html
@@ -1,3 +1,3 @@
-<button *ngIf="t.status == 'new' || t.status == 'ack'" mat-raised-button color="warn" (click)="cancelTransaction(t)">
-  Cancel
-</button>
+<mat-icon *ngIf="t.status == 'new' || t.status == 'ack'" class="clickable" (click)="cancelTransaction(t)" [matTooltip]="caption" style="color: grey">
+  delete
+</mat-icon>
