added confirmation box for deleting a transaction, fixed some bugs, added back in the voter names on the header

--- a/public/slunch-web/src/app/gridElements/grid-cancel-transaction-admin/grid-cancel-transaction-admin.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-cancel-transaction-admin/grid-cancel-transaction-admin.component.html
@@ -1,3 +1,3 @@
-<mat-icon class="clickable" (click)="cancelTransaction(t)" [matTooltip]="caption" style="color: grey">
+<mat-icon class="clickable" (click)="openDialog(t)" [matTooltip]="caption" style="color: grey">
   delete
 </mat-icon>
