--- a/public/slunch-web/src/app/gridElements/grid-cancel-transaction/grid-cancel-transaction.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-cancel-transaction/grid-cancel-transaction.component.html
@@ -1,3 +1,3 @@
-<mat-icon *ngIf="t.status == 'new' || t.status == 'ack'" class="clickable" (click)="cancelTransaction(t)" [matTooltip]="caption" style="color: grey">
+<mat-icon *ngIf="t.status == 'new' || t.status == 'ack'" class="clickable" (click)="openDialog(t)" [matTooltip]="caption" style="color: grey">
   delete
 </mat-icon>
