moved order button up, added i'm out button for voting, slunch title is now clickable, header is responsive, and worked on some formatting of tables

--- a/public/slunch-web/src/app/gridElements/grid-cancel-transaction-admin/grid-cancel-transaction-admin.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-cancel-transaction-admin/grid-cancel-transaction-admin.component.html
@@ -1,3 +1,9 @@
-<mat-icon class="clickable" (click)="openDialog(t)" [matTooltip]="caption" style="color: grey">
+<mat-icon class="clickable" (click)="openDialog(t)" [matTooltip]="caption" style="position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	color: grey">
   delete
 </mat-icon>
