--- a/public/slunch-web/src/app/header-plain/header-plain.component.html
+++ b/public/slunch-web/src/app/header-plain/header-plain.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="width:100%; background-color:#d81e05">
   <div fxFlexOffset="1" fxFlex="69">
-    <strong style="color: white; position: relative; font-size:55px">Slunch</strong>
+    <strong style="color: white; position: relative;" class="responsive-header">Slunch</strong>
   </div>
 </div>
