--- a/public/slunch-web/src/app/order/order.component.css
+++ b/public/slunch-web/src/app/order/order.component.css
@@ -5,3 +5,11 @@
 .option:active {
     opacity: 1;
 }
+
+.mat-autocomplete-panel{
+  position: fixed;
+}
+
+.mat-step-text-label{
+  font-size: 12px;
+}
