--- a/public/slunch-web/src/app/gridElements/grid-cancel-transaction/grid-cancel-transaction.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-cancel-transaction/grid-cancel-transaction.component.html
@@ -1,3 +1,8 @@
-<mat-icon *ngIf="t.status == 'new' || t.status == 'ack'" class="clickable" (click)="openDialog(t)" [matTooltip]="caption" style="color: grey">
+<mat-icon *ngIf="t.status == 'new' || t.status == 'ack'" class="clickable" (click)="openDialog(t)"
+          [matTooltip]="caption" style="position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0; margin: auto; color: grey">
   delete
 </mat-icon>
