--- a/public/slunch-web/src/app/header/header.component.css
+++ b/public/slunch-web/src/app/header/header.component.css
@@ -1,3 +1,13 @@
 .mat-tab-link{
     opacity:1;
 }
+
+.responsive-header {
+  font-size: 7vw;
+}
+
+@media screen and (min-width: 787px) {
+  .responsive-header {
+    font-size: 55px;
+  }
+}
