--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -1,15 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" style="width:100%; background-color:#d81e05">
-  <div>
-    <strong style="color: white; position: relative; float: left; font-size:55px">Slunch</strong>
+  <div class="clickable" (click)="router.navigate(['vote'])">
+    <strong class="responsive-header" style="color: white; position: relative; float: left;">Slunch</strong>
   </div>
-  <!--<div fxFlex="1 1 25%">-->
-  <!--<strong style="color: white; position: relative; font-size:12px">-->
-  <!--{{authService.getUsername()}}: {{authService.account?.balance | currency}}-->
-  <!--</strong>-->
-  <!--</div>-->
-  <!--<div fxFlex="2%">-->
-  <!--<mat-icon class="clickable" style="color: white; font-size:200%" (click)="logout()" matTooltip="Sign Out">exit_to_app</mat-icon>-->
-  <!--</div>-->
   <button style="color: white; margin-right: 1vw;" mat-button [matMenuTriggerFor]="menu">
     <span style="font-size: 18px">
       {{authService.getUsername()}}
@@ -50,38 +42,3 @@
     </button>
   </mat-menu>
 </div>
-
-<!--<nav mat-tab-nav-bar>-->
-<!--<div fxLayout="row wrap">-->
-<!--<div>-->
-<!--<a mat-tab-link (click)="router.navigate(['vote'])">Vote/Order</a>-->
-<!--</div>-->
-<!--<div>-->
-<!--<a mat-tab-link (click)="router.navigate(['account'])">Account</a>-->
-<!--</div>-->
-<!--<div>-->
-<!--<a mat-tab-link *ngIf="authService.isAdmin" (click)="router.navigate(['admin'])">-->
-<!--<p>-->
-<!--<span [matBadge]="transactionService.numUnprocessed" matBadgeOverlap="false" [matBadgeColor]="transactionService.numUnprocessed == 0 ? 'primary':'warn'">-->
-<!--Admin-->
-<!--</span>-->
-<!--</p>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div>-->
-<!--<a mat-tab-link (click)="router.navigate(['new-poll'])" *ngIf="authService.isAdmin">-->
-<!--New Poll-->
-<!--</a>-->
-<!--</div>-->
-<!--<div>-->
-<!--<span mat-tab-link *ngIf="authService.isAdmin" (click)="togglePoll()">-->
-<!--<mat-slide-toggle [(ngModel)]="pollService.allowPoll">Show Poll</mat-slide-toggle>-->
-<!--</span>-->
-<!--</div>-->
-<!--<div>-->
-<!--<span mat-tab-link *ngIf="authService.isAdmin" (click)="toggleOrders()">-->
-<!--<mat-slide-toggle disabled="{{pollService.getAdminSelectedOptions().length < 1}}" [(ngModel)]="stateService.isOrdering">Allow Orders</mat-slide-toggle>-->
-<!--</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</nav>-->
