--- a/public/slunch-web/src/app/gridElements/grid-voter-status/grid-voter-status.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-voter-status/grid-voter-status.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="center center" style="width:100%; height: 100%;">
-  <mat-icon class="clickable" [matTooltip]="o.voterStatus" *ngIf="o.voterStatus == 'Ordered'" style="color: green">
+  <mat-icon class="clickable" [matTooltip]="'Ordered'" *ngIf="o.voterStatus == 'Have Ordered'" style="color: green">
     done
   </mat-icon>
   <mat-icon class="clickable" [matTooltip]="o.voterStatus" *ngIf="o.voterStatus == 'Not Ordered'" style="color: red">
